--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "zendframework/zend-servicemanager": ">=2.1",
         "zendframework/zend-eventmanager": ">=2.1",
         "zendframework/zend-modulemanager": ">=2.1",
-        "zendframework/zend-stdlib": "~2.1"
+        "zendframework/zend-stdlib": "~2.1",
         "zendframework/zend-view": "~2.1"
     },
     "autoload": {
