--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "zendframework/zend-eventmanager": ">=2.1",
         "zendframework/zend-modulemanager": ">=2.1",
         "zendframework/zend-stdlib": "~2.1",
-        "zendframework/zend-view": "~2.1"
+        "zendframework/zend-view": "~2.1",
+        "zendframework/zend-filter": "~2.1"
     },
     "autoload": {
         "psr-0": {
