--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "module",
         "zf2"
     ],
+    "license": "BSD-3-Clause",
     "homepage": "http://www.github.com/mxc-commons/MxcLayoutScheme/",
     "authors": [
         {
