--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "zendframework/zend-modulemanager": ">=2.1",
         "zendframework/zend-stdlib": "~2.1",
         "zendframework/zend-view": "~2.1",
-        "zendframework/zend-filter": "~2.1"
+        "zendframework/zend-filter": "~2.1",
+	"mxc-commons/mxc-generics" : "v0.1.0"
     },
     "autoload": {
         "psr-0": {
