--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "zendframework/zend-modulemanager": ">=2.1",
         "zendframework/zend-stdlib": "~2.1",
         "zendframework/zend-view": "~2.1",
-        "zendframework/zend-filter": "~2.1",
-	"mxc-commons/mxc-generics" : "dev-master"
+        "zendframework/zend-filter": "~2.1"
     },
     "autoload": {
         "psr-0": {
